# shadygradients-qt

./: .gitignore  CMakeLists.txt  README.md  shaderqt.cpp  shaderqt.h  shaderqtConfig.cmake  shaders.qrc  shady_gradient_preset.json
docs/: API.md
examples/preview/: main.cpp
include/shaderqt/: ShadyGradientEffect.h  ShadyGradientWidget.h  shaderqt.h  shaderqt_global.h
qml/: ShaderGradientItem.qml  ShadyGradientItem.qml
shaders/: plane.frag  plane.vert  sphere.frag  sphere.vert  waterplane.frag  waterplane.vert
src/: ShaderGradientEffect.cpp  ShaderGradientEffect.h  ShaderGradientWidget.cpp  ShaderGradientWidget.h  ShadyGradientEffect.cpp  ShadyGradientEffect.h  ShadyGradientWidget.cpp  ShadyGradientWidget.h
src/preview/: main.cpp
